<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Solicitud3Activity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/gainsboro"
            android:gravity="center"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/solicitud"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal">

        <ImageView
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:src="@drawable/vicky"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                android:layout_weight="1">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"
                    android:text="@string/cliente"/>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gainsboro"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/estado4"
                android:textSize="15sp"
                android:textColor="@color/black"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dia"
                android:textSize="15sp"
                android:textColor="@color/black"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hora"
                android:textSize="15sp"
                android:textColor="@color/black"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/direccion"
                android:textSize="15sp"
                android:textColor="@color/black"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/celular"
                android:textSize="15sp"
                android:textColor="@color/black"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/servicio"
                android:textSize="15sp"
                android:textColor="@color/black"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fecha"
                android:textSize="15sp"
                android:textColor="@color/black"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/gainsboro"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/descripcion"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descripcion3"
                android:layout_marginTop="5dp"
                android:textSize="15sp"
                android:textColor="@color/black"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/gainsboro"/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/finalizar_servicio"
                android:text="@string/finalizar"
                android:textSize="20sp"
                android:layout_marginTop="50dp"
                android:textColor="@color/white"
                android:background="@color/orange"/>

    </LinearLayout>

</LinearLayout>